<resources>
    <string name="app_name">AsyncTask_Listener</string>
    <string name="action_settings">Settings</string>
    <string name="imc">índice de Massa Corporea (IMC)</string>
    <string name="vct">Valor Calórico Toral (VCT)</string>
    <string name="pa">Perfil Antropométrico (PA)</string>
    <string name="calc_imc">Calcule seu IMC</string>
    <string name="dig_peso">Seu peso</string>
    <string name="dig_altura">Sua altura</string>
    <string name="botaocalc">Calcular</string>
    <string name="botaolimpar">Limpar</string>
    <string name="dig_nivelesporte">Nível do Esporte</string>
    <string name="dig_entrevistado">Entrevistado</string>
    <string name="dig_sexo">Sexo</string>
</resources>
